<resources>
    <string name="app_name">Arch App</string>
    <string name="email_address_hint">E-Mail Address</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_image_content_description">App Logo</string>

    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>

    <string name="site_name_hint">Name</string>
    <string name="site_description_hint">Description</string>
    <string name="site_date_hint">Date</string>
    <string name="site_adnotes_hint">Additional Notes</string>
    <string name="site_btn_chooseImage">Add Image</string>
    <string name="site_btn_save_site">Save Site</string>
    <string name="site_btn_add_site">Add Site</string>
    <string name="site_cb_visited">Visited</string>
    <string name="site_btn_add_location">Add Location</string>
    <string name="site_enter_site_name">Enter Site Name</string>

    <string name="register_button_hint">CREATE ACCOUNT</string>
    <string name="send_password_reset_email">SEND PASSWORD RESET EMAIL</string>

    <string name="menu_logout">Logout</string>
    <string name="menu_up">Up</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_save_site">Save</string>
    <string name="menu_share">Share Site</string>
    <string name="menu_map">Map</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_search">Search</string>
    <string name="menu_navigator">Navigator</string>


    <string name="site_btn_select_image">Select site image</string>
    <string name="site_btn_change_image">Change site image</string>

    <string name="title_activity_site_maps">Map of All Sites</string>
    <string name="title_activity_edit_location">Edit Location</string>
    <string name="title_activity_site_view">Edit Site</string>
    <string name="title_activity_site_list_view">Sites</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_settings_view">Settings</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_activity_site_favourite_view">Favourite Sites</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="edit_tv_lat">00.000000</string>
    <string name="edit_tv_lng">00.000000</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_site_list">SiteListActivity</string>


</resources>
